k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: global-identity
  labels:
    app.kubernetes.io/name: global-identity
